#652 Fixed code smells for: Day3CutsceneTest.java